test/fail_compilation/fail166.d

void foo()
{
    const(uint***)[] p;
    const(int)***[] cp;
    p = cp;
}
